--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,9 @@ dependencies {
     testCompile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7'
 
     // ++ Serenity BDD
-    testCompile 'net.serenity-bdd:serenity-core:1.1.26'
-    testCompile 'net.serenity-bdd:serenity-junit:1.1.26'
-    testCompile 'net.serenity-bdd:serenity-cucumber:1.1.5'
+    testCompile 'net.serenity-bdd:serenity-core:1.4.0'
+//    testCompile 'net.serenity-bdd:serenity-junit:1.4.0'
+    testCompile 'net.serenity-bdd:serenity-cucumber:1.1.35'
 
     testCompile('junit:junit:4.12')
 
