--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,8 @@
-build:
-  image: java:openjdk-7
-  environment:
-    - GRADLE_USER_HOME=~/.gradle
-  commands:
-    - ./gradlew test
+pipeline:
+
+  build:
+    image: java:8-jdk
+    commands:
+      - ./gradlew build
+    when:
+      event: [push]
